--- a/index.html
+++ b/index.html
@@ -1,5 +1,122 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-<!-- ...你的完整HTML內容，這裡省略... -->
-<!-- 請注意：已將最下面 Cloudflare script 移除 -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>每日員工點名系統</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Microsoft JhengHei', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #eff6ff 0%, #e0e7ff 100%);
+      min-height: 100vh;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      text-align: center;
+      color: #1f2937;
+      margin-bottom: 1rem;
+    }
+    .rollcall-form input, .rollcall-form select {
+      padding: 0.5rem;
+      margin-bottom: 1rem;
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .rollcall-form button {
+      padding: 0.5rem 1rem;
+      background: #3b82f6;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .rollcall-form button:hover {
+      background: #2563eb;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 2rem;
+    }
+    th, td {
+      padding: 0.75rem;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+    th {
+      background: #f9fafb;
+    }
+    .status-present { color: green; }
+    .status-late { color: orange; }
+    .status-leave { color: blue; }
+    .status-absent { color: red; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>每日員工點名系統</h1>
+    <form class="rollcall-form" onsubmit="event.preventDefault(); addEmployee()">
+      <input type="text" id="empId" placeholder="員工編號" required />
+      <input type="text" id="empName" placeholder="員工姓名" required />
+      <select id="empStatus">
+        <option value="present">出席</option>
+        <option value="late">遲到</option>
+        <option value="leave">請假</option>
+        <option value="absent">曠職</option>
+      </select>
+      <button type="submit">加入點名</button>
+    </form>
+    <table>
+      <thead>
+        <tr>
+          <th>員工編號</th>
+          <th>姓名</th>
+          <th>狀態</th>
+        </tr>
+      </thead>
+      <tbody id="employeeList"></tbody>
+    </table>
+  </div>
+  <script>
+    const employeeList = document.getElementById('employeeList');
+
+    function addEmployee() {
+      const id = document.getElementById('empId').value.trim();
+      const name = document.getElementById('empName').value.trim();
+      const status = document.getElementById('empStatus').value;
+
+      const row = document.createElement('tr');
+      row.innerHTML = `
+        <td>${id}</td>
+        <td>${name}</td>
+        <td class="status-${status}">${getStatusLabel(status)}</td>
+      `;
+
+      employeeList.appendChild(row);
+
+      document.getElementById('empId').value = '';
+      document.getElementById('empName').value = '';
+    }
+
+    function getStatusLabel(status) {
+      switch (status) {
+        case 'present': return '出席';
+        case 'late': return '遲到';
+        case 'leave': return '請假';
+        case 'absent': return '曠職';
+        default: return '';
+      }
+    }
+  </script>
+</body>
 </html>
