--- a/index.html
+++ b/index.html
@@ -1,101 +1,152 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>每日員工點名系統</title>
   <style>
     body {
-      font-family: "Microsoft JhengHei", sans-serif;
-      background-color: #f2f4f8;
-      padding: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Microsoft JhengHei', sans-serif;
+      background-color: #f1f5f9;
+      margin: 0;
+      padding: 2rem;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+      background: #fff;
+      border-radius: 10px;
+      padding: 2rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h1 {
       text-align: center;
-      margin-bottom: 20px;
+      color: #1e293b;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 10px;
+      margin-top: 1.5rem;
     }
     th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
+      padding: 0.75rem;
+      border: 1px solid #e2e8f0;
       text-align: center;
     }
     th {
-      background-color: #e0e0e0;
+      background-color: #f8fafc;
+      color: #1e293b;
     }
     button {
-      padding: 5px 10px;
-      margin: 2px;
+      padding: 0.4rem 0.8rem;
+      border: none;
+      border-radius: 4px;
       cursor: pointer;
+      margin: 0 2px;
     }
-    .btn-group {
-      display: flex;
-      justify-content: center;
+    .present { background-color: #22c55e; color: white; }
+    .leave { background-color: #3b82f6; color: white; }
+    .absent { background-color: #ef4444; color: white; }
+    .controls {
+      margin-top: 1rem;
+      text-align: center;
+    }
+    .controls button {
+      background-color: #1e40af;
+      color: white;
+      margin: 0 0.5rem;
     }
   </style>
 </head>
 <body>
-  <h1>每日員工點名系統</h1>
-  <table id="employeeTable">
-    <thead>
-      <tr>
-        <th>員工編號</th>
-        <th>姓名</th>
-        <th>部門</th>
-        <th>點名狀態</th>
-        <th>操作</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="container">
+    <h1>每日員工點名系統</h1>
+    <label for="caller">點名人：<input type="text" id="caller" placeholder="請輸入點名人"></label>
+    <div class="controls">
+      <button onclick="exportPDF()">匯出 PDF</button>
+      <button onclick="clearData()">清空資料</button>
+    </div>
+    <table>
+      <thead>
+        <tr>
+          <th>員工編號</th>
+          <th>姓名</th>
+          <th>部門</th>
+          <th>狀態</th>
+          <th>點名人</th>
+          <th>時間</th>
+        </tr>
+      </thead>
+      <tbody id="employeeTable"></tbody>
+    </table>
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
     const employees = [
-      ["0011", "邱瑞統", "模發部"], ["0004", "陳水波", "模發部"], ["0400", "趙玉芬", "模發部"],
-      ["0405", "葉倢羽", "模發部"], ["0494", "王朋楹", "模發部"], ["0531", "許嘉紓", "模發部"],
-      ["0538", "何文泰", "模發部"], ["0328", "賴榮樂", "基材部"], ["0495", "賴致錡", "基材部"],
-      ["0507", "阿發", "基材部"], ["0517", "黎文全", "基材部"], ["0541", "范庭進", "基材部"],
-      ["0559", "阮維峰", "基材部"], ["0663", "伸迪", "基材部"], ["0042", "蕭景池", "包裝部"],
-      ["0016", "施妙菁", "包裝部"], ["V002", "李慧玲", "包裝部"], ["0003", "吳淑美", "包裝部"],
-      ["0152", "陳媛玲", "包裝部"], ["0287", "曹巧伶", "包裝部"], ["0482", "朱珮菱", "包裝部"],
-      ["0511", "文氏雪貞", "包裝部"], ["0012", "黃秀鉗", "生產部"], ["0226", "阮氏李", "生產部"],
-      ["0402", "蔡鴻模", "管理部"], ["0017", "洪姃廷", "管理部"], ["0297", "陳淑鸞", "管理部"],
-      ["0304", "吳淑蓮", "生產部"], ["0473", "陳婷媚", "管理部"], ["0514", "陳姿蓉", "管理部"],
-      ["0515", "陳佳宜", "生產部"], ["0552", "陳允薰", "生產部"], ["0399", "豆氏劉", "生產部"],
-      ["0465", "施俞宣", "生產部"], ["0479", "希蒂", "生產部"], ["0487", "尤妮", "生產部"],
-      ["0513", "斐氏秋", "生產部"], ["0519", "曹孜孜", "生產部"], ["0520", "莊凡潔", "生產部"],
-      ["0526", "黃氏玲", "生產部"], ["0527", "阮氏夢", "生產部"], ["0533", "陶氏金銀", "生產部"],
-      ["0539", "阮氏然", "生產部"], ["0547", "團氏月", "生產部"], ["0548", "河氏燕", "生產部"],
-      ["0555", "押氏通", "生產部"], ["0660", "范氏黃秋", "生產部"], ["0661", "陳氏心", "生產部"],
-      ["0662", "范氏梅", "生產部"]
+      ["0011","邱瑞統","模發部"],["0004","陳水波","模發部"],["0400","趙玉芬","模發部"],["0405","葉倢羽","模發部"],["0494","王朋楹","模發部"],["0531","許嘉紓","模發部"],["0538","何文泰","模發部"],
+      ["0328","賴榮樂","基材部"],["0495","賴致錡","基材部"],["0507","阿發","基材部"],["0517","黎文全","基材部"],["0541","范庭進","基材部"],["0559","阮維峰","基材部"],["0663","伸迪","基材部"],
+      ["0042","蕭景池","包裝部"],["0016","施妙菁","包裝部"],["V002","李慧玲","包裝部"],["0003","吳淑美","包裝部"],["0152","陳媛玲","包裝部"],["0287","曹巧伶","包裝部"],["0482","朱珮菱","包裝部"],["0511","文氏雪貞","包裝部"],
+      ["0012","黃秀鉗","生產部"],["0226","阮氏李","生產部"],["0402","蔡鴻模","管理部"],["0017","洪姃廷","管理部"],["0297","陳淑鸞","管理部"],["0304","吳淑蓮","生產部"],["0473","陳婷媚","管理部"],["0514","陳姿蓉","管理部"],["0515","陳佳宜","生產部"],
+      ["0552","陳允薰","生產部"],["0399","豆氏劉","生產部"],["0465","施俞宣","生產部"],["0479","希蒂","生產部"],["0487","尤妮","生產部"],["0513","斐氏秋","生產部"],["0519","曹孜孜","生產部"],["0520","莊凡潔","生產部"],["0526","黃氏玲","生產部"],["0527","阮氏夢","生產部"],["0533","陶氏金銀","生產部"],
+      ["0539","阮氏然","生產部"],["0547","團氏月","生產部"],["0548","河氏燕","生產部"],["0555","押氏通","生產部"],["0660","范氏黃秋","生產部"],["0661","陳氏心","生產部"],["0662","范氏梅","生產部"]
     ];
 
-    const tbody = document.querySelector("#employeeTable tbody");
-    employees.forEach(emp => {
-      const tr = document.createElement("tr");
+    const table = document.getElementById('employeeTable');
+    const saved = JSON.parse(localStorage.getItem('rollcall') || '{}');
+
+    employees.forEach(([id, name, dept]) => {
+      const tr = document.createElement('tr');
+      const caller = document.getElementById('caller').value;
+      const savedRow = saved[id];
       tr.innerHTML = `
-        <td>${emp[0]}</td>
-        <td>${emp[1]}</td>
-        <td>${emp[2]}</td>
-        <td class="status">未點名</td>
-        <td class="btn-group">
-          <button onclick="mark(this, '出席')">出席</button>
-          <button onclick="mark(this, '請假')">請假</button>
-          <button onclick="mark(this, '曠職')">曠職</button>
+        <td>${id}</td>
+        <td>${name}</td>
+        <td>${dept}</td>
+        <td>
+          <button class="present" onclick="mark('${id}', '出席')">出席</button>
+          <button class="leave" onclick="mark('${id}', '請假')">請假</button>
+          <button class="absent" onclick="mark('${id}', '曠職')">曠職</button>
         </td>
+        <td>${savedRow ? savedRow.caller : ''}</td>
+        <td>${savedRow ? savedRow.time : ''}</td>
       `;
-      tbody.appendChild(tr);
+      tr.id = 'row-' + id;
+      table.appendChild(tr);
     });
 
-    function mark(btn, status) {
-      const row = btn.closest("tr");
-      const statusCell = row.querySelector(".status");
-      statusCell.textContent = status;
-      statusCell.style.color = status === '出席' ? 'green' : status === '請假' ? 'orange' : 'red';
+    function mark(id, status) {
+      const caller = document.getElementById('caller').value.trim();
+      if (!caller) return alert('請輸入點名人');
+      const time = new Date().toLocaleString('zh-TW');
+      const row = document.getElementById('row-' + id);
+      row.cells[3].innerHTML = status;
+      row.cells[4].innerText = caller;
+      row.cells[5].innerText = time;
+      saved[id] = { status, caller, time };
+      localStorage.setItem('rollcall', JSON.stringify(saved));
+    }
+
+    function exportPDF() {
+      import('https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js').then(({ jsPDF }) => {
+        const doc = new jsPDF();
+        doc.text("每日員工點名紀錄", 10, 10);
+        let y = 20;
+        for (const id in saved) {
+          const emp = employees.find(e => e[0] === id);
+          const row = saved[id];
+          doc.text(`${emp[0]} ${emp[1]} (${emp[2]}) - ${row.status} by ${row.caller} at ${row.time}`, 10, y);
+          y += 10;
+        }
+        doc.save('rollcall.pdf');
+      });
+    }
+
+    function clearData() {
+      if (confirm('確定要清除所有資料？')) {
+        localStorage.removeItem('rollcall');
+        location.reload();
+      }
     }
   </script>
 </body>
