--- a/index.html
+++ b/index.html
@@ -1,127 +1,146 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>每日員工點名系統</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Noto Sans TC', sans-serif;
-      background-color: #f2f6fc;
-      padding: 2rem;
+      background-color: #f3f6fb;
+      font-family: 'Microsoft JhengHei', sans-serif;
+    }
+    h1 {
+      margin: 30px 0;
+      font-weight: bold;
+      text-align: center;
     }
     .clock {
-      font-size: 1.25rem;
-      color: #666;
+      text-align: center;
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+    }
+    .section-title {
+      font-weight: bold;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      text-align: center;
     }
     .status-box {
-      border-radius: 0.5rem;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      font-size: 1.2rem;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 20px 0;
     }
-    .status-出席 { background-color: #28a745; }
-    .status-遲到 { background-color: #ffc107; color: #000; }
-    .status-請假 { background-color: #007bff; }
-    .status-曠職 { background-color: #dc3545; }
-    .status-總人數 { background-color: #343a40; }
+    .status-box .card {
+      flex: 1;
+      max-width: 150px;
+      text-align: center;
+      font-weight: bold;
+    }
+    .status-box .card .card-body {
+      font-size: 1.5rem;
+    }
+    table {
+      background-color: white;
+    }
   </style>
 </head>
-
 <body>
   <div class="container">
-    <h2 class="text-center mb-4">每日員工點名系統</h2>
+    <h1>每日員工點名系統</h1>
 
-    <div class="text-center mb-3">
-      <div id="dateDisplay"></div>
-      <div class="clock" id="clock"></div>
+    <div class="clock">
+      <div id="date"></div>
+      <div id="time"></div>
     </div>
 
-    <div class="mb-3 row">
-      <label class="col-sm-2 col-form-label">選擇點名人</label>
-      <div class="col-sm-4">
-        <select id="signerSelect" class="form-select">
+    <div class="section-title">點名人員選擇</div>
+    <div class="row justify-content-center mb-4">
+      <div class="col-md-3">
+        <select id="rollcallBy" class="form-select">
           <option selected>請選擇點名人</option>
           <option>吳俊彥</option>
-          <option>吳淑蓮</option>
-          <!-- 其他點名人 -->
+          <option>淑蓮</option>
         </select>
       </div>
-      <div class="col-sm-6">
-        <div>今日點名人：<span id="selectedSigner">尚未選擇</span></div>
-        <div>點名時間：<span id="signTime">--:--</span></div>
+      <div class="col-md-2">
+        <button class="btn btn-dark w-100" onclick="resetRollcall()">重新選擇</button>
       </div>
     </div>
 
-    <div class="mb-4">
-      <button class="btn btn-danger me-2" onclick="setSession('上午')">☀️ 早上點名</button>
-      <button class="btn btn-primary me-2" onclick="setSession('中午')">🍱 中午點名</button>
-      <button class="btn btn-dark me-2" onclick="summaryView()">📊 總覽</button>
-      <button class="btn btn-purple" onclick="weekSummary()">🗓️ 周統計</button>
+    <div class="section-title">點名時段選擇</div>
+    <div class="d-flex justify-content-center mb-4">
+      <button class="btn btn-danger me-2">☀️ 早上點名</button>
+      <button class="btn btn-primary me-2">🕛 中午點名</button>
+      <button class="btn btn-secondary me-2">📊 總覽</button>
+      <button class="btn btn-purple">🗓️ 周統計</button>
     </div>
 
-    <div class="mb-4">
-      當前時段：<strong id="currentSession">早上點名</strong>
+    <div class="status-box">
+      <div class="card border-success">
+        <div class="card-body text-success">已出席<br><span>0</span></div>
+      </div>
+      <div class="card border-warning">
+        <div class="card-body text-warning">遲到<br><span>0</span></div>
+      </div>
+      <div class="card border-primary">
+        <div class="card-body text-primary">請假<br><span>0</span></div>
+      </div>
+      <div class="card border-danger">
+        <div class="card-body text-danger">曠職<br><span>0</span></div>
+      </div>
+      <div class="card border-dark">
+        <div class="card-body text-dark">總人數<br><span>49</span></div>
+      </div>
     </div>
 
-    <div class="row text-white mb-4">
-      <div class="col status-box status-出席">已出席<br><span id="count出席">0</span></div>
-      <div class="col status-box status-遲到">遲到<br><span id="count遲到">0</span></div>
-      <div class="col status-box status-請假">請假<br><span id="count請假">0</span></div>
-      <div class="col status-box status-曠職">曠職<br><span id="count曠職">0</span></div>
-      <div class="col status-box status-總人數">總人數<br><span id="count總人數">49</span></div>
-    </div>
+    <table class="table table-bordered">
+      <thead class="table-light">
+        <tr>
+          <th>員工編號</th>
+          <th>姓名</th>
+          <th>部門</th>
+          <th>點名狀態</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody id="employeeTable">
+        <tr>
+          <td>0011</td>
+          <td>邱瑞統</td>
+          <td>模發部</td>
+          <td>未點名</td>
+          <td>
+            <button class="btn btn-outline-success btn-sm">出席</button>
+            <button class="btn btn-outline-primary btn-sm">請假</button>
+            <button class="btn btn-outline-danger btn-sm">曠職</button>
+          </td>
+        </tr>
+        <!-- 其餘人員可用 JS 動態渲染填入 -->
+      </tbody>
+    </table>
 
-    <div id="app">員工資料區塊放這裡（後續繼續補上 Vue 或 JS 員工列表邏輯）</div>
-
-    <div class="mt-4">
-      <button class="btn btn-success" onclick="exportPDF()">匯出 PDF</button>
-      <button class="btn btn-secondary" onclick="clearData()">重新選擇</button>
+    <div class="text-center mb-4">
+      <button class="btn btn-info">匯出 PDF</button>
     </div>
   </div>
 
   <script>
     function updateClock() {
       const now = new Date();
-      const hours = now.getHours().toString().padStart(2, '0');
-      const minutes = now.getMinutes().toString().padStart(2, '0');
-      const seconds = now.getSeconds().toString().padStart(2, '0');
-      document.getElementById('clock').textContent = `${hours}:${minutes}:${seconds}`;
+      const days = ['星期日', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'];
+      document.getElementById('date').textContent =
+        `${now.getFullYear()}年${now.getMonth() + 1}月${now.getDate()}日 ${days[now.getDay()]}`;
+      document.getElementById('time').textContent =
+        now.toLocaleTimeString('zh-TW', { hour12: false });
     }
     setInterval(updateClock, 1000);
     updateClock();
 
-    function updateDate() {
-      const days = ['星期日', '一', '二', '三', '四', '五', '六'];
-      const now = new Date();
-      const year = now.getFullYear();
-      const month = now.getMonth() + 1;
-      const date = now.getDate();
-      const day = days[now.getDay()];
-      document.getElementById('dateDisplay').textContent = `${year}年${month}月${date}日 ${day}`;
+    function resetRollcall() {
+      document.getElementById('rollcallBy').selectedIndex = 0;
     }
-    updateDate();
-
-    document.getElementById('signerSelect').addEventListener('change', function () {
-      const signer = this.value;
-      document.getElementById('selectedSigner').textContent = signer;
-      const now = new Date();
-      const time = now.toTimeString().substring(0, 5);
-      document.getElementById('signTime').textContent = time;
-    });
-
-    function setSession(session) {
-      document.getElementById('currentSession').textContent = session + '點名';
-    }
-    function summaryView() { alert('總覽功能尚未建置'); }
-    function weekSummary() { alert('周統計功能尚未建置'); }
-    function exportPDF() { alert('PDF 匯出功能尚未建置'); }
-    function clearData() { location.reload(); }
   </script>
 </body>
-
 </html>
